# nidstream

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  app.py  docker-compose.yml  literature_review.txt  nidstream-api-task-def.json  nidstream-dashboard-task-def.json  pyproject.toml  pytest.ini  setup.sh
.github/workflows/: ci.yml
configs/: model_config.yaml  pipeline_config.yaml
data/: DATASET.md
data/predictions/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
models/: .gitkeep
models/metrics/: lgb_metrics.pkl  lr_metrics.pkl  mlp_metrics.pkl  nb_metrics.pkl  rf_metrics.pkl  svm_metrics.pkl  xgb_metrics.pkl
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_model_training.ipynb  03a_train_logistic_regression.ipynb  03b_train_random_forest.ipynb  03c_train_xgboost.ipynb  03d_train_lightgbm.ipynb  03e_train_svm.ipynb  03f_train_neural_net.ipynb  03g_train_naive_bayes.ipynb  04_model_comparison.ipynb  training_utils.py
scripts/: csv_to_json.py  start_mlflow.sh  stream_temporal.py
src/: __init__.py
src/api/: __init__.py  main.py
src/batch/: __init__.py  run_batch.py
src/feature_pipeline/: __init__.py  feature_engineering.py  load.py  preprocess.py
src/inference_pipeline/: __init__.py  predict.py
src/training_pipeline/: __init__.py  eval.py  train.py  train_from_notebook.py  tune.py
tests/: test_api.py  test_features.py  test_training.py
