[project]
name = "nidstream"
version = "0.1.0"
description = "End-to-end ML pipeline for Network Intrusion Detection using anomaly detection on CSE-CIC-IDS2018 dataset"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # ML/Data Processing
    "pandas>=2.1.1",
    "numpy>=1.26.4",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "imbalanced-learn>=0.11.0",
    
    # Spark for large-scale data processing
    "pyspark>=3.5.0",
    
    # Deep Learning (for advanced anomaly detection)
    "tensorflow>=2.15.0",
    
    # API & Web
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    
    # MLOps
    "mlflow>=2.8.0",
    "optuna>=3.4.0",
    
    # AWS Integration
    "boto3>=1.28.0",
    "s3fs>=2023.10.0",
    
    # Data Quality
    "great-expectations>=0.18.0",
    "evidently>=0.4.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.10.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "ipykernel>=6.26.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
